# af-molstar-viewer

./: .gitignore  Makefile  PLAN.md  PLAN_viewer_states.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: pyproject.toml
backend/src/backend/: __init__.py  api.py  fixtures.py  models.py  selection.py  service.py  structure_edit.py
backend/tests/: test_selection.py  test_service.py  test_structure_edit.py
docs/: README.md
fixtures/: project-seed.json
fixtures/test-inputs/af3/: toy_confidences.json  toy_model.cif
fixtures/test-inputs/colabfold/: toy_scores.json
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  examples.ts
frontend/src/components/: FileImportPanel.tsx  LegendPanel.tsx  MolstarPanel.tsx  PaeHeatmap.tsx  Workspace.tsx
frontend/src/domain/: project-types.ts  selection.ts  target-interface.ts
frontend/src/lib/: constants.ts  discovery.ts  performance.ts  types.ts  utils.ts
frontend/src/pages/: ProjectPage.tsx
frontend/src/styles/: app.css
frontend/src/test/: app-project.test.tsx  derived-target-name.test.ts  discovery.test.ts  helpers.ts  (+5 more)
src/: main.tsx  vite-env.d.ts
src/app/: App.tsx  examples.ts
src/components/: FileImportPanel.tsx  LegendPanel.tsx  MolstarPanel.tsx  PaeHeatmap.tsx  ResolverPanel.tsx  SequenceStrip.tsx  Workspace.tsx
src/lib/: constants.ts  discovery.ts  types.ts  utils.ts
src/styles/: app.css
src/test/: discovery.test.ts  helpers.ts  setup.ts  workspace.test.tsx
(+46 files in other folders)
